--models for db (restruct, renaming, del unused, add folders, add fluents)

--- a/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
+++ b/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
@@ -133,36 +133,34 @@
     <Compile Include="BusinessContexts\IWorkSpeedBusinessContext.cs" />
     <Compile Include="DataContexts\WorkSpeedDataContext.cs" />
     <Compile Include="ModelExtansions.cs" />
+    <Compile Include="Models\ActionDetails\ActionDetailBase.cs" />
+    <Compile Include="Models\ActionDetails\DoubleAddressDetail.cs" />
+    <Compile Include="Models\ActionDetails\InventoryActionDetail.cs" />
+    <Compile Include="Models\ActionDetails\ReceptionActionDetail.cs" />
+    <Compile Include="Models\ActionDetails\ShipmentActionDetail.cs" />
+    <Compile Include="Models\ActionDetails\WithProductActionDetail.cs" />
+    <Compile Include="Models\ActionDetails\SingleAddressDetail.cs" />
+    <Compile Include="Models\Actions\OtherAction.cs" />
     <Compile Include="Models\Category.cs" />
-    <Compile Include="Models\Actions\EmployeeAction.cs" />
+    <Compile Include="Models\Actions\EmployeeActionBase.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\Appointment.cs" />
-    <Compile Include="Models\BonusesAndPenaltiesKinds.cs" />
-    <Compile Include="Models\BonusOrPenalty.cs" />
-    <Compile Include="Models\CellTypes.cs" />
-    <Compile Include="Models\Complexity.cs" />
+    <Compile Include="Models\BoxTypes.cs" />
     <Compile Include="Models\Document1C.cs" />
     <Compile Include="Models\Employee.cs" />
-    <Compile Include="Models\Actions\GatheringAction.cs" />
+    <Compile Include="Models\Actions\DoubleAddressAction.cs" />
     <Compile Include="Models\Actions\InventoryAction.cs" />
     <Compile Include="Models\Operation.cs" />
     <Compile Include="Models\OperationGroup.cs" />
     <Compile Include="Models\OperationGroups.cs" />
-    <Compile Include="Models\PersonnelFileEntry.cs" />
+    <Compile Include="Models\PersonnelFileRecord.cs" />
     <Compile Include="Models\Position.cs" />
     <Compile Include="Models\Product.cs" />
-    <Compile Include="Models\ProductDims.cs" />
     <Compile Include="Models\Rank.cs" />
     <Compile Include="Models\Actions\ReceptionAction.cs" />
-    <Compile Include="Models\Salary.cs" />
-    <Compile Include="Models\Actions\ScanningAction.cs" />
     <Compile Include="Models\Shift.cs" />
     <Compile Include="Models\Actions\ShipmentAction.cs" />
-    <Compile Include="Models\ShipmentComplexity.cs" />
-    <Compile Include="Models\ShortBreak.cs" />
-    <Compile Include="Models\Actions\WithProductAction.cs" />
-    <Compile Include="Models\WorkDay.cs" />
-    <Compile Include="Models\WorkDayStates.cs" />
+    <Compile Include="Models\ShortBreakSchedule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BusinessContexts\WorkSpeedBusinessContext.cs" />
   </ItemGroup>
