--change sql server in a connection string in the data.test project

--- a/Tests/WorkSpeed.Data.Tests/App.config
+++ b/Tests/WorkSpeed.Data.Tests/App.config
@@ -11,7 +11,7 @@
     </runtime>
 
     <connectionStrings>
-        <add name="Default" connectionString="Server=(localdb)\MSSQLLocalDb;Database=WorkSpeedTestDb;Trusted_Connection=True;" />
+        <add name="Default" connectionString="Server=(localdb)\v11.0;Database=WorkSpeedTestDb;Trusted_Connection=True;" />
     </connectionStrings>
 
 </configuration>
