--- a/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
+++ b/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
@@ -129,13 +129,18 @@
     <Compile Include="Comparers\EmployeeActionComparer.cs" />
     <Compile Include="Comparers\EmployeeComparer.cs" />
     <Compile Include="Comparers\OperationComparer.cs" />
+    <Compile Include="DataContexts\Configurations\Actions\DoubleAddressActionConfiguration.cs" />
+    <Compile Include="DataContexts\Configurations\Actions\InventoryActionConfiguration.cs" />
+    <Compile Include="DataContexts\Configurations\Actions\OtherActionConfiguration.cs" />
+    <Compile Include="DataContexts\Configurations\Actions\ReceptionActionConfiguration.cs" />
     <Compile Include="DataContexts\Configurations\AddressConfiguration.cs" />
     <Compile Include="DataContexts\Configurations\Document1CConfiguration.cs" />
     <Compile Include="DataContexts\Configurations\EmployeeConfiguration.cs" />
     <Compile Include="DataContexts\Configurations\OperationConfiguration.cs" />
     <Compile Include="DataContexts\Configurations\PositionConfiguration.cs" />
     <Compile Include="DataContexts\Configurations\ProductConfiguration.cs" />
-    <Compile Include="DataContexts\Configurations\ShipmentActionConfiguration.cs" />
+    <Compile Include="DataContexts\Configurations\Actions\ShipmentActionConfiguration.cs" />
+    <Compile Include="DataContexts\Configurations\ActionDetails\ShipmentActionDetailConfiguration.cs" />
     <Compile Include="Interfaces\IEntity.cs" />
     <Compile Include="BusinessContexts\IWorkSpeedBusinessContext.cs" />
     <Compile Include="DataContexts\WorkSpeedDataContext.cs" />
@@ -152,13 +157,13 @@
     <Compile Include="Models\Actions\EmployeeActionBase.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\Appointment.cs" />
-    <Compile Include="Models\BoxTypes.cs" />
+    <Compile Include="Models\Enums\BoxTypes.cs" />
     <Compile Include="Models\Document1C.cs" />
     <Compile Include="Models\Employee.cs" />
     <Compile Include="Models\Actions\DoubleAddressAction.cs" />
     <Compile Include="Models\Actions\InventoryAction.cs" />
     <Compile Include="Models\Operation.cs" />
-    <Compile Include="Models\OperationGroups.cs" />
+    <Compile Include="Models\Enums\OperationGroups.cs" />
     <Compile Include="Models\Position.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\Rank.cs" />
