--- a/Code/WorkSpeed.DesktopClient/App.config
+++ b/Code/WorkSpeed.DesktopClient/App.config
@@ -15,4 +15,9 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+
+  <connectionStrings>
+      <add name="Default" connectionString="Server=(localdb)\v11.0;Database=WorkSpeedDb;Trusted_Connection=True;" />
+  </connectionStrings>
+
 </configuration>
