--- a/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
+++ b/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
@@ -125,15 +125,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessContexts\IWarehouseService.cs" />
+    <Compile Include="BusinessContexts\ProductivityService.cs" />
     <Compile Include="BusinessContexts\RuntimeWorkSpeedBusinessContext.cs" />
     <Compile Include="Comparers\EmployeeActionComparer.cs" />
     <Compile Include="Comparers\EmployeeComparer.cs" />
     <Compile Include="Comparers\OperationComparer.cs" />
+    <Compile Include="DataContexts\Configurations\ActionDetails\DoubleAddressDetailConfiguration.cs" />
+    <Compile Include="DataContexts\Configurations\ActionDetails\InventoryActionDetailConfiguration.cs" />
+    <Compile Include="DataContexts\Configurations\ActionDetails\ReceptionActionDetailConfiguration.cs" />
     <Compile Include="DataContexts\Configurations\Actions\DoubleAddressActionConfiguration.cs" />
     <Compile Include="DataContexts\Configurations\Actions\InventoryActionConfiguration.cs" />
     <Compile Include="DataContexts\Configurations\Actions\OtherActionConfiguration.cs" />
     <Compile Include="DataContexts\Configurations\Actions\ReceptionActionConfiguration.cs" />
     <Compile Include="DataContexts\Configurations\AddressConfiguration.cs" />
+    <Compile Include="DataContexts\Configurations\AppointmentConfiguration.cs" />
+    <Compile Include="DataContexts\Configurations\CategoryConfiguration.cs" />
+    <Compile Include="DataContexts\Configurations\CategorySetConfiguration.cs" />
     <Compile Include="DataContexts\Configurations\Document1CConfiguration.cs" />
     <Compile Include="DataContexts\Configurations\EmployeeConfiguration.cs" />
     <Compile Include="DataContexts\Configurations\OperationConfiguration.cs" />
@@ -141,9 +149,17 @@
     <Compile Include="DataContexts\Configurations\ProductConfiguration.cs" />
     <Compile Include="DataContexts\Configurations\Actions\ShipmentActionConfiguration.cs" />
     <Compile Include="DataContexts\Configurations\ActionDetails\ShipmentActionDetailConfiguration.cs" />
+    <Compile Include="DataContexts\Configurations\RankConfiguration.cs" />
+    <Compile Include="DataContexts\Configurations\ShiftConfiguration.cs" />
+    <Compile Include="DataContexts\Configurations\ShortBreakScheduleConfiguration.cs" />
     <Compile Include="Interfaces\IEntity.cs" />
     <Compile Include="BusinessContexts\IWorkSpeedBusinessContext.cs" />
-    <Compile Include="DataContexts\WorkSpeedDataContext.cs" />
+    <Compile Include="DataContexts\WorkSpeedDbContext.cs" />
+    <Compile Include="Migrations\20190204165210_InitialCreate.cs" />
+    <Compile Include="Migrations\20190204165210_InitialCreate.designer.cs">
+      <DependentUpon>20190204165210_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\WorkSpeedDataContextModelSnapshot.cs" />
     <Compile Include="ModelExtansions.cs" />
     <Compile Include="Models\ActionDetails\ActionDetailBase.cs" />
     <Compile Include="Models\ActionDetails\DoubleAddressDetail.cs" />
@@ -157,6 +173,7 @@
     <Compile Include="Models\Actions\EmployeeActionBase.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\Appointment.cs" />
+    <Compile Include="Models\CategorySet.cs" />
     <Compile Include="Models\Enums\BoxTypes.cs" />
     <Compile Include="Models\Document1C.cs" />
     <Compile Include="Models\Employee.cs" />
@@ -172,11 +189,11 @@
     <Compile Include="Models\Actions\ShipmentAction.cs" />
     <Compile Include="Models\ShortBreakSchedule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="BusinessContexts\WorkSpeedBusinessContext.cs" />
+    <Compile Include="BusinessContexts\WarehouseService.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
     <None Include="ClassDiagram1.cd" />
+    <None Include="ClassDiagram2.cd" />
     <None Include="packages.config" />
     <None Include="Seed\SeedFiles\Выработка 28.11.2018 8.00 - 29.11.2018 8.00\12 - Декабрь 2018 - расчёты %28тариф 1%29.xlsx" />
     <None Include="Seed\SeedFiles\Выработка 28.11.2018 8.00 - 29.11.2018 8.00\Выработка 28.11.2018 8.00 - 29.11.2018 8.00.xls" />
@@ -188,9 +205,7 @@
     <None Include="Seed\SeedFiles\Выработка 28.11.2018 8.00 - 29.11.2018 8.00\Сотрудники - Декабрь 2018 %28не удалять%29.xlsx" />
     <None Include="Seed\SeedFiles\Выработка 28.11.2018 8.00 - 29.11.2018 8.00\Сотрудники от 29.11.2018 г.xls" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Migrations\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
