--- a/Code/WorkSpeed.DesktopClient/WorkSpeed.DesktopClient.csproj
+++ b/Code/WorkSpeed.DesktopClient/WorkSpeed.DesktopClient.csproj
@@ -270,6 +270,14 @@
       <Project>{c92ff512-b9c0-4aaf-9a9b-d0dee139af44}</Project>
       <Name>Agbm.Wpf.MvvmBaseLibrary</Name>
     </ProjectReference>
+    <ProjectReference Include="..\WorkSpeed.Data\WorkSpeed.Data.csproj">
+      <Project>{72e065c5-8769-4008-9529-11194be488e0}</Project>
+      <Name>WorkSpeed.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WorkSpeed.Productivity\WorkSpeed.Productivity.csproj">
+      <Project>{61c2a155-2641-4617-826e-82911531837a}</Project>
+      <Name>WorkSpeed.Productivity</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
