--- a/Code/WorkSpeed.DesktopClient/WorkSpeed.DesktopClient.csproj
+++ b/Code/WorkSpeed.DesktopClient/WorkSpeed.DesktopClient.csproj
@@ -282,9 +282,9 @@
       <Project>{61c2a155-2641-4617-826e-82911531837a}</Project>
       <Name>WorkSpeed.Productivity</Name>
     </ProjectReference>
-    <ProjectReference Include="..\WorkSpeed\WorkSpeed.csproj">
+    <ProjectReference Include="..\WorkSpeed\WorkSpeed.Business.csproj">
       <Project>{035d995a-6f8a-47c1-aebd-41b2cc5d6d7d}</Project>
-      <Name>WorkSpeed</Name>
+      <Name>WorkSpeed.Business</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
