--- a/Code/WorkSpeed/WorkSpeed.Business.csproj
+++ b/Code/WorkSpeed/WorkSpeed.Business.csproj
@@ -135,16 +135,16 @@
     <Compile Include="ActionData.cs" />
     <Compile Include="BreakConstraintsForNotSmokers.cs" />
     <Compile Include="BreakConstraintsForSmokers.cs" />
-    <Compile Include="BusinessContexts\Contracts\IImportService.cs" />
-    <Compile Include="BusinessContexts\Contracts\IService.cs" />
-    <Compile Include="BusinessContexts\ImportService.cs" />
-    <Compile Include="BusinessContexts\Contracts\IWarehouseService.cs" />
-    <Compile Include="BusinessContexts\Contracts\IWorkSpeedBusinessContext.cs" />
-    <Compile Include="BusinessContexts\ProductivityService.cs" />
-    <Compile Include="BusinessContexts\RuntimeWorkSpeedBusinessContext.cs" />
-    <Compile Include="BusinessContexts\Service.cs" />
-    <Compile Include="BusinessContexts\WarehouseService.cs" />
-    <Compile Include="BusinessContexts\WorkSpeedBusinessContextCreator.cs" />
+    <Compile Include="Contexts\Contracts\IImportService.cs" />
+    <Compile Include="Contexts\Contracts\IService.cs" />
+    <Compile Include="Contexts\ImportService.cs" />
+    <Compile Include="Contexts\Contracts\IWarehouseService.cs" />
+    <Compile Include="Contexts\Contracts\IWorkSpeedBusinessContext.cs" />
+    <Compile Include="Contexts\ProductivityService.cs" />
+    <Compile Include="Contexts\RuntimeWorkSpeedBusinessContext.cs" />
+    <Compile Include="Contexts\Service.cs" />
+    <Compile Include="Contexts\WarehouseService.cs" />
+    <Compile Include="Contexts\WorkSpeedBusinessContextCreator.cs" />
     <Compile Include="CategoryConstraints.cs" />
     <Compile Include="Constraints\BreakConstraints.cs" />
     <Compile Include="Constraints\DefaultCategoryConstraints.cs" />
