--- a/Code/WorkSpeed/WorkSpeed.Business.csproj
+++ b/Code/WorkSpeed/WorkSpeed.Business.csproj
@@ -156,6 +156,7 @@
     <Compile Include="FileModels\Comparers\ActionImportModelComparer.cs" />
     <Compile Include="Constraints\IBreakConstraints.cs" />
     <Compile Include="Constraints\ICategoryConstraints.cs" />
+    <Compile Include="FileModels\Contracts\IImportModel.cs" />
     <Compile Include="FileModels\EmployeeFullImportModel.cs" />
     <Compile Include="FileModels\EmployeeImportModel.cs" />
     <Compile Include="FileModels\Converters\ImportModelConverter.cs" />
