--- a/Code/WorkSpeed.DesktopClient/Properties/Settings.settings
+++ b/Code/WorkSpeed.DesktopClient/Properties/Settings.settings
@@ -1,7 +1,7 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
 <SettingsFile xmlns="uri:settings" CurrentProfile="(Default)">
   <Profiles>
-    <Profile EmployeeName="(Default)" />
+    <Profile Name="(Default)" />
   </Profiles>
   <Settings />
 </SettingsFile>
