--- a/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
+++ b/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
@@ -151,11 +151,6 @@
     <Compile Include="DataContexts\Configurations\ShortBreakScheduleConfiguration.cs" />
     <Compile Include="Models\IKeyedEntity.cs" />
     <Compile Include="DataContexts\WorkSpeedDbContext.cs" />
-    <Compile Include="Migrations\20190204165210_InitialCreate.cs" />
-    <Compile Include="Migrations\20190204165210_InitialCreate.designer.cs">
-      <DependentUpon>20190204165210_InitialCreate.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\WorkSpeedDataContextModelSnapshot.cs" />
     <Compile Include="ModelExtansions.cs" />
     <Compile Include="Models\ActionDetails\ActionDetailBase.cs" />
     <Compile Include="Models\ActionDetails\DoubleAddressDetail.cs" />
@@ -206,6 +201,9 @@
       <Project>{47680bf8-c76a-44b9-bde3-694f1a73ccb1}</Project>
       <Name>Agbm.NpoiExcel</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
