--- a/Code/WorkSpeed.DesktopClient/WorkSpeed.DesktopClient.csproj
+++ b/Code/WorkSpeed.DesktopClient/WorkSpeed.DesktopClient.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Converters\BorderThicknessToStrokeThicknessConverter.cs" />
     <Compile Include="Converters\EvenOddToZeroOneConverter.cs" />
     <Compile Include="TemplateSelectors\StageDataTemplateSelector.cs" />
+    <Compile Include="ViewModels\Dialogs\ErrorViewModel.cs" />
     <Compile Include="ViewModels\EntityViewModels\CategoryViewModel.cs" />
     <Compile Include="ViewModels\EntityViewModels\ProductivityViewModel.cs" />
     <Compile Include="ViewModels\EntityViewModels\ShortBreakViewModel.cs" />
@@ -82,6 +83,9 @@
     <Compile Include="ViewModels\StageViewModels\StageViewModel.cs" />
     <Compile Include="Views\Design\DesignWindow.xaml.cs">
       <DependentUpon>DesignWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Dialogs\ErrorWindow.xaml.cs">
+      <DependentUpon>ErrorWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\UserControls\EmployeeTable.xaml.cs">
       <DependentUpon>EmployeeTable.xaml</DependentUpon>
@@ -160,6 +164,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Design\DesignWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Dialogs\ErrorWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -256,9 +264,7 @@
   <ItemGroup>
     <Resource Include="Resources\Images\openfile.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ViewModels\DialogViewModels\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Resource Include="Resources\Fonts\Noto_Serif\LICENSE.txt" />
   </ItemGroup>
